--- a/langForm.fmx
+++ b/langForm.fmx
@@ -1,18 +1,27 @@
-object language: Tlanguage
+object languageForm: TlanguageForm
   Left = 0
   Top = 0
   BorderIcons = []
   BorderStyle = Single
-  Caption = 'language'
+  Caption = 'langForm'
   ClientHeight = 480
-  ClientWidth = 344
+  ClientWidth = 640
   Fill.Kind = Solid
+  StyleLookup = 'pushpanel'
   FormStyle = Popup
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
+  OnCreate = FormCreate
   OnShow = FormShow
-  DesignerMasterStyle = 3
+  OnHide = FormHide
+  DesignerMasterStyle = 0
+  object FillColorAnimation: TColorAnimation
+    Duration = 0.200000002980232200
+    PropertyName = 'Fill.Color'
+    StartValue = claWhite
+    StopValue = claWhite
+  end
   object langButton1: TButton
     StyledSettings = [Family]
     Margins.Left = 2.000000000000000000
@@ -20,13 +29,14 @@ object language: Tlanguage
     Margins.Right = 2.000000000000000000
     Margins.Bottom = 2.000000000000000000
     Position.X = 24.000000000000000000
-    Position.Y = 16.000000000000000000
+    Position.Y = 17.000000000000000000
     Size.Width = 80.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 5
+    TabOrder = 2
     Text = #1088#1091#1089#1089#1082#1080#1081
     TextSettings.Font.Size = 16.000000000000000000
+    TextSettings.FontColor = claNull
     TextSettings.Trimming = None
     OnClick = langButton1Click
   end
@@ -41,26 +51,24 @@ object language: Tlanguage
     Size.Width = 80.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 4
+    TabOrder = 3
     Text = 'english'
     TextSettings.Font.Size = 16.000000000000000000
+    TextSettings.FontColor = claNull
     TextSettings.Trimming = None
     OnClick = langButton2Click
   end
   object langButton4: TButton
-    StyledSettings = [Family]
-    Margins.Left = 2.000000000000000000
-    Margins.Top = 2.000000000000000000
-    Margins.Right = 2.000000000000000000
-    Margins.Bottom = 2.000000000000000000
+    StyledSettings = [Family, Style]
     Position.X = 24.000000000000000000
-    Position.Y = 76.000000000000000000
+    Position.Y = 74.000000000000000000
     Size.Width = 80.000000000000000000
     Size.Height = 30.000000000000000000
     Size.PlatformDefault = False
-    TabOrder = 3
+    TabOrder = 4
     Text = 'espa'#241'ol'
     TextSettings.Font.Size = 16.000000000000000000
+    TextSettings.FontColor = claNull
     TextSettings.Trimming = None
     OnClick = langButton4Click
   end
