average statistics added | app is ready to be downloaded | version 1.0?

--- a/statistics.LgXhdpiPh.fmx
+++ b/statistics.LgXhdpiPh.fmx
@@ -1,5 +1,6 @@
 inherited statsForm_LgXhdpiPh: TstatsForm_LgXhdpiPh
   ClientHeight = 199
+  ClientWidth = 200
   Constraints.MaxHeight = 200.000000000000000000
   Constraints.MaxWidth = 200.000000000000000000
   Constraints.MinHeight = 200.000000000000000000
