ratings added to main game | GuessWhat game added in test mode (with half completed Rus file only) | gameMode form added to switch between games |||| All works fine. Need to finish GuessWhat writings on different languages.

--- a/HeaderFooterTemplate.LgXhdpiTb.fmx
+++ b/HeaderFooterTemplate.LgXhdpiTb.fmx
@@ -125,4 +125,14 @@
   inherited meaning: TButton
     TextSettings.Font.StyleExt = {00070000000000000004000000}
   end
+  inherited GestureManager1: TGestureManager
+    GestureData = <
+      item
+        Control = Owner
+        Collection = <
+          item
+            GestureID = sgiRight
+          end>
+      end>
+  end
 end
