--- a/HeaderFooterTemplate.NmXhdpiPh.fmx
+++ b/HeaderFooterTemplate.NmXhdpiPh.fmx
@@ -101,4 +101,14 @@ inherited MainForm_NmXhdpiPh: TMainForm_NmXhdpiPh
   inherited meaning: TButton
     TextSettings.Font.StyleExt = {00070000000000000004000000}
   end
+  inherited GestureManager1: TGestureManager
+    GestureData = <
+      item
+        Control = Owner
+        Collection = <
+          item
+            GestureID = sgiRight
+          end>
+      end>
+  end
 end
